--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.1.4",
     "lucide-react": "^0.394.0",
+    "nanoid": "^5.0.7",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
     "react": "^18",
